src/objects/Bookmark_Links__c.object
<CustomObject>
    <description>This object is used to store bookmark links displayed on the application footer. This object will be business enabled.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Must be true for bookmark link to active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>Display name of links</description>
        <label>Display Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profiles__c</fullName>
        <description>Profiles enabled for each link</description>
        <label>Profiles</label>
        <picklist>
            <picklistValues>
                <fullName>ACET Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET CSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET DCSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET Rapid Responder Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACET EB Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECM Back Office Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research User</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>Hyperlink URL</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Bookmark Link</label>
    <listViews>
        <fullName>ACET_Member_Bookmark_Links</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Profiles__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profiles__c</field>
            <operation>includes</operation>
            <value>ACET Member</value>
        </filters>
        <label>ACET Member Bookmark Links</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Profiles__c</columns>
        <columns>URL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_By_Harish_Sanakki</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>URL__c</columns>
        <columns>Profiles__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Harish Sanakki</value>
        </filters>
        <label>Created By Harish Sanakki</label>
    </listViews>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Bookmark Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookmark Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>